# py-ftparchive

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
ftparchive/: __main__.py  logger.py  packages.py  release.py  utils.py
py_ftparchive/: __main__.py  packages.py  release.py  utils.py
