[tool.poetry]
name = "py-ftparchive"
version = "1.0.0"
description = ""
authors = ["ja1dan <ajaidan0@gmail.com>"]
readme = "README.md"
packages = [{include = "py_ftparchive"}]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"
datetime = "^4.9"
pydeb = {git = "https://github.com/LuzProject/pydeb"}

[tool.poetry.scripts]
py-ftparchive = 'py_ftparchive.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
